--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
           <button type="submit" class="site-search-btn btn-reset">Найти</button>
         </form>
 
-        <ul class="main-user-nav">
+        <ul class="main-user-nav lst-reset">
           <li class="main-user-item"><a href="#">Войти</a></li>
           <li class="main-user-item"><a href="#">Сравнить</a></li>
           <li class="main-user-item"><a href="#">Корзина</a></li>
         </ul>
 
-        <ul class="main-site-list">
+        <ul class="main-site-list lst-reset">
           <li class="main-site-item">
             <a class="main-submenu-toggle">Каталог товаров</a>
-            <ul class="main-submenu">
-              <li><a href="catalog.html">Виртуальная реальность</a></li>
-              <li><a href="catalog.html">Моноподы для селфи</a></li>
-              <li><a href="catalog.html">Экшн-камеры</a></li>
-              <li><a href="catalog.html">Фитнес-браслеты</a></li>
-              <li><a href="catalog.html">Умные часы</a></li>
-              <li><a href="catalog.html">Квадрокоптеры</a></li>
-            </ul>
+            <div class="main-submenu-container">
+              <ul class="main-submenu lst-reset">
+                <li class="main-submenu-item"><a href="#">Виртуальная реальность</a></li>
+                <li class="main-submenu-item"><a href="#">Фитнес-браслеты</a></li>
+                <li class="main-submenu-item"><a href="#">Квадрокоптеры</a></li>
+                <li class="main-submenu-item"><a href="catalog.html">Моноподы для селфи</a></li>
+                <li class="main-submenu-item"><a href="#">Умные часы</a></li>
+                <li class="main-submenu-item"><a href="#">Экшн-камеры</a></li>
+              </ul>
+            </div>
           </li>
           <li class="main-site-item"><a href="#">Доставка</a></li>
           <li class="main-site-item"><a href="#">Гарантия</a></li>
@@ -44,39 +46,41 @@
     </header>
     <!-- Здесь будет main -->
 
-    <section class="info">
-      <h3>О нас</h3>
-      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-      <p>Мы можем доставить ваш товар в самые отдалённые точки России! DEVICE работает со многими транспортными компаниями:</p>
-      <ul class="info-list">
-        <li class="info-item"><a href="#">Деловые линии</a></li>
-        <li class="info-item"><a href="#">Автотрейдинг</a></li>
-        <li class="info-item"><a href="#">ЖелДорЭкспедиция</a></li>
-      </ul>
-      <a href="#" class="btn">Подробнее о нас</a>
-    </section>
+    <div class="container wrapper">
+      <section class="info">
+        <h3>О нас</h3>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдалённые точки России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul class="info-list">
+          <li class="info-item"><a href="#">Деловые линии</a></li>
+          <li class="info-item"><a href="#">Автотрейдинг</a></li>
+          <li class="info-item"><a href="#">ЖелДорЭкспедиция</a></li>
+        </ul>
+        <a href="#" class="btn">Подробнее о нас</a>
+      </section>
 
-    <section class="contacts">
-      <h3>Контакты</h3>
-      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a href="img/map-big.jpg">
-        <img src="img/map.jpg" alt="Карта (уменьшенная)" width="560" height="220" class="map-preview">
-        <!-- <span class="visually-hidden">Увеличить карту</span> -->
-      </a>
-      <a href="#" title="Напишите нам" class="btn">Напишите нам</a>
-    </section>
+      <section class="contacts">
+        <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <a href="img/map-big.jpg" class="contacts-map">
+          <img src="img/map.jpg" alt="Карта (уменьшенная)" width="560" height="220" class="map-preview">
+          <!-- <span class="visually-hidden">Увеличить карту</span> -->
+        </a>
+        <a href="#" title="Напишите нам" class="btn">Напишите нам</a>
+      </section>
+    </div>
 
     <footer class="main-footer">
       <nav>
         <a class="footer-logo logo">
           <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
         </a>
-        <ul class="footer-user-nav">
+        <ul class="footer-user-nav lst-reset">
           <li class="footer-user-item"><a href="#">Войти</a></li>
           <li class="footer-user-item"><a href="#">Сравнить</a></li>
           <li class="footer-user-item"><a href="#">Корзина</a></li>
         </ul>
-        <ul class="footer-nav-list">
+        <ul class="footer-nav-list lst-reset">
           <li><a href="https://goo.gl/maps/woREYKRREx12" class="footer-nav-address">г. Москва, ул. Строителей, 15</a></li>
           <li class="footer-nav-item"><a href="#">Доставка</a></li>
           <li class="footer-nav-item"><a href="#">Гарантия</a></li>
@@ -84,7 +88,7 @@
           <li><a href="tel:+74954959595" class="footer-nav-phone">Тел: +7(495)495-95-95</a></li>
         </ul>
       </nav>
-      <ul class="footer-social-list">
+      <ul class="footer-social-list lst-reset">
         <li class="footer-social-item">
           <a href="#">
             <span class="visually-hidden">Facebook</span>
