--- a/index.html
+++ b/index.html
@@ -71,46 +71,47 @@
     </div>
 
     <footer class="main-footer">
-      <nav>
-        <a class="footer-logo logo">
-          <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
-        </a>
-        <ul class="footer-user-nav lst-reset">
-          <li class="footer-user-item"><a href="#">Войти</a></li>
-          <li class="footer-user-item"><a href="#">Сравнить</a></li>
-          <li class="footer-user-item"><a href="#">Корзина</a></li>
-        </ul>
-        <ul class="footer-nav-list lst-reset">
-          <li><a href="https://goo.gl/maps/woREYKRREx12" class="footer-nav-address">г. Москва, ул. Строителей, 15</a></li>
-          <li class="footer-nav-item"><a href="#">Доставка</a></li>
-          <li class="footer-nav-item"><a href="#">Гарантия</a></li>
-          <li class="footer-nav-item"><a href="#">Контакты</a></li>
-          <li><a href="tel:+74954959595" class="footer-nav-phone">Тел: +7(495)495-95-95</a></li>
-        </ul>
-      </nav>
-      <ul class="footer-social-list lst-reset">
-        <li class="footer-social-item">
-          <a href="#">
-            <span class="visually-hidden">Facebook</span>
+      <div class="wrapper footer-container">
+        <nav>
+          <a class="footer-logo logo">
+            <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
           </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="#">
-            <span class="visually-hidden">Istagram</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="#">
-            <span class="visually-hidden">Twitter</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
+          <ul class="footer-user-nav lst-reset">
+            <li class="footer-user-item"><a href="#">Войти</a></li>
+            <li class="footer-user-item"><a href="#">Сравнить</a></li>
+            <li class="footer-user-item"><a href="#">Корзина</a></li>
+          </ul>
+          <ul class="footer-nav-list lst-reset">
+            <li><a href="https://goo.gl/maps/woREYKRREx12" class="footer-nav-address">г. Москва, ул. Строителей, 15</a></li>
+            <li class="footer-nav-item"><a href="#">Доставка</a></li>
+            <li class="footer-nav-item"><a href="#">Гарантия</a></li>
+            <li class="footer-nav-item"><a href="#">Контакты</a></li>
+            <li><a href="tel:+74954959595" class="footer-nav-phone">Тел: +7(495)495-95-95</a></li>
+          </ul>
+        </nav>
+        <div class="footer-social">
+          <ul class="footer-social-list lst-reset">
+            <li class="footer-social-item">
+              <a href="#">
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#">
+                <span class="visually-hidden">Istagram</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#">
+                <span class="visually-hidden">Twitter</span>
+              </a>
+            </li>
+          </ul>
           <a href="https://htmlacademy.ru" class="footer-social-copyright">
             <span class="visually-hidden">HTML Academy</span>
           </a>
-        </li>
-      </ul>
-
+        </div>
+      </div>
     </footer>
 
     <section class="map-popup" hidden>
