--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
             <div class="item-container">
               <img src="img/item-1.jpg" alt="Карточка товара" height="380" width="360">
               <form action="echo.htmlacademy.ru" class="cart-add">
-                <button type="button" class="btn-reset btn">
+                <button type="button" class="cart-add-btn btn-reset btn">
                   В корзину
                 </button>
                 <button type="button" class="btn-reset btn-compare">
@@ -115,7 +115,7 @@
             <div class="item-container">
               <img src="img/item-2.jpg" alt="Карточка товара" height="380" width="360">
               <form action="echo.htmlacademy.ru">
-                <button type="button" class="btn-reset btn">
+                <button type="button" class="cart-add-btn btn-reset btn">
                   В корзину
                 </button>
                 <button type="button" class="btn-reset btn-compare">
@@ -132,7 +132,7 @@
             <div class="item-container">
               <img src="img/item-3.jpg" alt="Карточка товара" height="380" width="360">
               <form action="echo.htmlacademy.ru">
-                <button type="button" class="btn-reset btn">
+                <button type="button" class="cart-add-btn btn-reset btn">
                   В корзину
                 </button>
                 <button type="button" class="btn-reset btn-compare">
@@ -149,7 +149,7 @@
             <div class="item-container">
               <img src="img/item-4.jpg" alt="Карточка товара" height="380" width="360">
               <form action="echo.htmlacademy.ru">
-                <button type="button" class="btn-reset btn">
+                <button type="button" class="cart-add-btn btn-reset btn">
                   В корзину
                 </button>
                 <button type="button" class="btn-reset btn-compare">
